// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Divider examples Decorative divider should render correctly 1`] = `
<div>
  <hr
    aria-hidden="true"
    class="v-divider v-divider-decorative"
  />
</div>
`;

exports[`Divider examples Default divider should render correctly 1`] = `
<div>
  <hr
    class="v-divider"
  />
</div>
`;

exports[`Divider examples Section divider should render correctly 1`] = `
<div>
  <hr
    class="v-divider v-divider-section"
  />
</div>
`;
